--- a/ids4/ids4demo/MvcClient/Views/Home/About.cshtml
+++ b/ids4/ids4demo/MvcClient/Views/Home/About.cshtml
@@ -4,4 +4,10 @@
 <h2>@ViewData["Title"]</h2>
 <h3>@ViewData["Message"]</h3>
 
-<p>Use this area to provide additional information.</p>
+@foreach (var item in User.Claims)
+{
+    <p>
+        <strong>@item.Type</strong>:
+        <p>@item.Value</p>
+    </p>
+}
